--- a/index.html
+++ b/index.html
@@ -147,7 +147,13 @@
                                 <div class="additional-info__education">
                                     <h3 class="additional-info__education-header">Education</h3>
                                     <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability"> 2021 </span>
+                                        <span class="additional-info__education-university-durability"> 1999 </span>
+                                        <h3 class="additional-info__education-university-speciality">Faculty of Foreign Languages</h3>
+                                        <p class="additional-info__education-university-name">Drogobych Ivan Franko State Pedagogical University</p>
+                                        <span class="additional-info__education-university-durability"> 2022-2023 </span>
+                                        <h3 class="additional-info__education-university-speciality">Frontend Development</h3>
+                                        <p class="additional-info__education-university-name">IT Step Academy</p>
+                                        <span class="additional-info__education-university-durability"> 2024 </span>
                                         <h3 class="additional-info__education-university-speciality">Full-Stack Development</h3>
                                         <p class="additional-info__education-university-name">Binary Studio Academy</p>
                                     </div>
