Education block update

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text">Problem solving, Continuous Learning, Team Collaboration</p>
+                        <p class="skills__text"><span><b>Web Technologies: </b></span>Html5,CSS3</p>
+                        <p class="skills__text"><span><b>Programming languages: </b></span>JavaScript (ES6+)</p>
+                        <p class="skills__text"><span><b>Frameworks and Libraries: </b></span>React,Next.js,SCSS,Tailwind,Redux</p>
+                        <p class="skills__text"><span><b>Essential Skills: </b></span>Problem solving, Continuous Learning, Team Collaboration</p>
+
                     </div>
                 </div>
             </div>
@@ -125,7 +129,7 @@
                             <h3 class="experiences__header">Experience</h3>
                             <div class="experiences__company">
                                 <div class="experiences__company-header">
-                                    <span class="experiences__company-header-durability">2005-Present</span>
+                                    <span class="experiences__company-header-durability">2024</span>
                                     <h3 class="experiences__company-header-name">Binary Studio</h3>
                                 </div>
 
@@ -147,14 +151,14 @@
                                 <div class="additional-info__education">
                                     <h3 class="additional-info__education-header">Education</h3>
                                     <div class="additional-info__education-university">
-                                        <span class="additional-info__education-university-durability"> 1999 </span>
                                         <h3 class="additional-info__education-university-speciality">Faculty of Foreign Languages</h3>
+                                        <span class="additional-info__education-university-durability"> 1993-1999 </span>
                                         <p class="additional-info__education-university-name">Drogobych Ivan Franko State Pedagogical University</p>
-                                        <span class="additional-info__education-university-durability"> 2022-2023 </span>
                                         <h3 class="additional-info__education-university-speciality">Frontend Development</h3>
+                                        <span class="additional-info__education-university-durability"> 2022-2023 </span>
                                         <p class="additional-info__education-university-name">IT Step Academy</p>
-                                        <span class="additional-info__education-university-durability"> 2024 </span>
                                         <h3 class="additional-info__education-university-speciality">Full-Stack Development</h3>
+                                        <span class="additional-info__education-university-durability"> 2024 </span>
                                         <p class="additional-info__education-university-name">Binary Studio Academy</p>
                                     </div>
                                 </div>
