--- a/index.html
+++ b/index.html
@@ -130,6 +130,21 @@
                             <div class="experiences__company">
                                 <div class="experiences__company-header">
                                     <span class="experiences__company-header-durability">2024</span>
+                                    <h3 class="experiences__company-header-name">Concept Area</h3>
+                                </div>
+                                <div class="experiences__company-project">
+                                    <span class="experiences__company-project-role">Full-Stack Developer</span>
+                                    <h3 class="experiences__company-project-name">Strategic IT consulting for digital transformation</h3>
+                                    <ul class="experiences__company-project-responsibilities">
+                                        <li>Backend Architecture</li>
+                                        <li>Frontend Development</li>
+                                        <li>Backend Development</li>
+                                        <li>API Integration</li>
+                                        <li>Code Maintenance</li>
+                                    </ul>
+                                </div>
+                                <div class="experiences__company-header">
+                                    <span class="experiences__company-header-durability">2024</span>
                                     <h3 class="experiences__company-header-name">Binary Studio</h3>
                                 </div>
 
