--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
             </div>
             <div class="container">
                 <div class="resume__block">
+                    <div class="skills">
+                        <h3 class="skills__header">Projects</h3>
+                        <p class="skills__text"><span><b>Landing Pages Projects: </b></span><a href="https://github.com/vikmay/Landing">https://github.com/vikmay/Landing</a></p>
+                        <p class="skills__text"><span><b>Online Shop (Next.js) </b></span><a href="https://github.com/vikmay/Exam-Maikut-Bolonnyi">https://github.com/vikmay/onlineshop</a></p>
+                        <p class="skills__text"><span><b>Weather stations(Angular)(under development) </b></span><a href="https://github.com/vikmay/Stations">https://github.com/vikmay/Stations</a></p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="resume__block">
                     <div class="main-info fh">
                         <div class="experiences">
 
