--- a/index.html
+++ b/index.html
@@ -26,23 +26,63 @@
                         <div class="contact-info__block">
 
                             <a
-                                href=""
+                                href="https://www.google.com/maps/place/%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87
+                                ,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,
+                                +82100/@49.3521054,23.3455673,11z/data=!3m1!4b1!4m6!3m5!1s0x473a4ea312a96935:0x9a7037350ab28ee5!8m2!3d49.3580116!4d23.5123193!16zL20vMDJrNnN6?authuser=0&entry=ttu"
                                 rel="author"
                                 class="contact-info__item"
+                                target="_blank"
                             >
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg
-                                        class="contact-info__item-icon"
                                         xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 384 512"
-                                    >
-                                        <path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
-                                      192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
-                                      13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
-                                      80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path>
+                                    ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                        <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                                     </svg>
                                 </div>
-                                <span>Lviv, Ukraine</span>
+                                <span>Drogobych, Ukraine</span>
+                            </a>
+
+                            <a
+                                href="mailto:vikmaykut@gmail.com"
+                                rel="author"
+                                class="contact-info__item"
+                                target="_blank"
+                            >
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 512 512"
+                                    >
+                                        <path d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 
+                                          150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0
+                                           16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0
+                                          128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64
+                                          64H64c-35.3 0-64-28.7-64-64V128z" />
+                                    </svg>
+                                </div>
+                                <span>vikmaykut@gmail.com</span>
+                            </a>
+                            <a
+                                href="tel:+380677046951"
+                                rel="author"
+                                class="contact-info__item"
+                                target="_blank"
+                            >
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 512 512"
+                                    >
+                                        <path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0
+                                             46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24
+                                             -88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3
+                                              11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13
+                                              .7-11.2 18.4-30 11.6-46.3l-40-96z" />
+                                    </svg>
+                                </div>
+                                <span>+380677046951</span>
                             </a>
 
                         </div>
@@ -61,23 +101,42 @@
                                 href="https://ua.linkedin.com/company/binary-studio_241166"
                                 rel="author"
                                 class="contact-info__item"
+                                target="_blank"
                             >
                                 <div class="contact-info__item-icon-wrapper">
                                     <svg
-                                        class="contact-info__item-icon"
                                         xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 448 512"
                                     >
-                                        <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
-                                      480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4
-                                      416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9
-                                      96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5
-                                      38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9
-                                      27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5
-                                      62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path>
+                                        <path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5
+                                             0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8
+                                              54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3
+                                               0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5
+                                                42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
                                     </svg>
                                 </div>
-                                <span>binary-studio</span>
+                                <span>Binary-Studio</span>
+                            </a>
+                            <a
+                                href="https://www.linkedin.com/in/viktor-maikut/?lipi=urn%3Ali%3Apage%3Ad_
+                                flagship3_feed%3BCIhOeN8aRg%2BgwOxFZQxJuw%3D%3D"
+                                rel="author"
+                                class="contact-info__item"
+                                target="_blank"
+                            >
+                                <div class="contact-info__item-icon-wrapper">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 448 512"
+                                    >
+                                        <path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5
+                                         0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8
+                                          54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3
+                                           0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5
+                                            42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z" />
+                                    </svg>
+                                </div>
+                                <span>Viktor_Maikut</span>
                             </a>
 
                         </div>
