--- a/index.html
+++ b/index.html
@@ -263,6 +263,35 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="resume__block">
+                    <div class="skills hobbies">
+                        <h3 class="skills__header">Hobbies</h3>
+                        <p class="skills__text">I am passionate about programming, video surveillance, alarms, and music.
+                            I play keyboards and guitar.<br>
+                            <b>If u wanna ROCK - PUSH the guitar & MOVE YOUR BODY!!!</b>
+                        </p>
+                        <button
+                            class="rock-guitar-button"
+                            onclick="document.getElementById('myAudio').play()"
+                        >
+                            <img
+                                src="./assets/guitar.png"
+                                alt="guitar"
+                            >
+                        </button>
+
+                        <audio id="myAudio">
+                            <source
+                                src="./assets/audio.mp3"
+                                type="audio/mpeg"
+                            >
+                            Your browser does not support the audio element.
+                        </audio>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
