--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta
         name="viewport"
         content="width=device-width, initial-scale=1"
-    />
+    >
     <title>Résumé</title>
     <link
         rel="stylesheet"
         href="styles.css"
-    />
+    >
 </head>
 
 <body>
@@ -92,7 +92,7 @@
                                 class="contact-info__avatar"
                                 src="assets/avatar.png"
                                 alt="Avatar"
-                            />
+                            >
                         </div>
 
                         <div class="contact-info__block">
@@ -118,8 +118,7 @@
                                 <span>Binary-Studio</span>
                             </a>
                             <a
-                                href="https://www.linkedin.com/in/viktor-maikut/?lipi=urn%3Ali%3Apage%3Ad_
-                                flagship3_feed%3BCIhOeN8aRg%2BgwOxFZQxJuw%3D%3D"
+                                href="https://www.linkedin.com/in/viktor-maikut/"
                                 rel="author"
                                 class="contact-info__item"
                                 target="_blank"
