--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta
         name="viewport"
         content="width=device-width, initial-scale=1"
-    >
+    />
     <title>Résumé</title>
     <link
         rel="stylesheet"
         href="styles.css"
-    >
+    />
 </head>
 
 <body>
@@ -20,11 +20,12 @@
             <div class="container">
                 <div class="resume__block">
                     <h1 class="contact-info__header">Viktor Maikut</h1>
-                    <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+                    <h3 class="contact-info__sub-header">
+                        Full-Stack Developer
+                    </h3>
 
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
-
                             <a
                                 href="https://www.google.com/maps/place/%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87
                                 ,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,
@@ -37,7 +38,7 @@
                                     <svg
                                         xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 384 512"
-                                    ><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                    >
                                         <path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
                                     </svg>
                                 </div>
@@ -55,11 +56,9 @@
                                         xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 512 512"
                                     >
-                                        <path d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 
-                                          150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0
-                                           16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0
-                                          128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64
-                                          64H64c-35.3 0-64-28.7-64-64V128z" />
+                                        <path
+                                            d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"
+                                        />
                                     </svg>
                                 </div>
                                 <span>vikmaykut@gmail.com</span>
@@ -75,16 +74,13 @@
                                         xmlns="http://www.w3.org/2000/svg"
                                         viewBox="0 0 512 512"
                                     >
-                                        <path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0
-                                             46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24
-                                             -88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3
-                                              11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13
-                                              .7-11.2 18.4-30 11.6-46.3l-40-96z" />
+                                        <path
+                                            d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"
+                                        />
                                     </svg>
                                 </div>
                                 <span>+380677046951</span>
                             </a>
-
                         </div>
 
                         <div class="contact-info__block contact-info__block--center">
@@ -92,11 +88,10 @@
                                 class="contact-info__avatar"
                                 src="assets/avatar.png"
                                 alt="Avatar"
-                            >
+                            />
                         </div>
 
                         <div class="contact-info__block">
-
                             <a
                                 href="https://ua.linkedin.com/company/binary-studio_241166"
                                 rel="author"
@@ -137,7 +132,6 @@
                                 </div>
                                 <span>Viktor_Maikut</span>
                             </a>
-
                         </div>
                     </div>
                 </div>
@@ -160,10 +154,13 @@
                           48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
                             </svg>
                         </div>
-                        <p class="intro_text">I'm Viktor, a software developer driven by innovation and
-                            problem-solving. With a strong background in computer science,
-                            I'm dedicated to pushing boundaries and crafting elegant
-                            solutions through code.</p>
+                        <p class="intro_text">
+                            I'm Viktor, a software developer driven by
+                            innovation and problem-solving. With a strong
+                            background in computer science, I'm dedicated to
+                            pushing boundaries and crafting elegant
+                            solutions through code.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -171,11 +168,19 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
-                        <p class="skills__text"><span><b>Web Technologies: </b></span>Html5,CSS3</p>
-                        <p class="skills__text"><span><b>Programming languages: </b></span>JavaScript (ES6+)</p>
-                        <p class="skills__text"><span><b>Frameworks and Libraries: </b></span>React,Next.js,SCSS,Tailwind,Redux</p>
-                        <p class="skills__text"><span><b>Essential Skills: </b></span>Problem solving, Continuous Learning, Team Collaboration</p>
-
+                        <p class="skills__text">
+                            <span><b>Web Technologies: </b></span>Html5,CSS3
+                        </p>
+                        <p class="skills__text">
+                            <span><b>Programming languages: </b></span>JavaScript (ES6+)
+                        </p>
+                        <p class="skills__text">
+                            <span><b>Frameworks and Libraries: </b></span>React,Next.js,SCSS,Tailwind,Redux
+                        </p>
+                        <p class="skills__text">
+                            <span><b>Essential Skills: </b></span>Problem
+                            solving, Continuous Learning, Team Collaboration
+                        </p>
                     </div>
                 </div>
             </div>
@@ -183,10 +188,17 @@
                 <div class="resume__block">
                     <div class="skills">
                         <h3 class="skills__header">Projects</h3>
-                        <p class="skills__text"><span><b>Landing Pages Projects: </b></span><a href="https://github.com/vikmay/Landing">https://github.com/vikmay/Landing</a></p>
-                        <p class="skills__text"><span><b>Online Shop (Next.js) </b></span><a href="https://github.com/vikmay/Exam-Maikut-Bolonnyi">https://github.com/vikmay/onlineshop</a></p>
-                        <p class="skills__text"><span><b>Weather stations(Angular)(under development) </b></span><a href="https://github.com/vikmay/Stations">https://github.com/vikmay/Stations</a></p>
-
+                        <p class="skills__text">
+                            <span><b>Landing Pages Projects: </b></span><a href="https://github.com/vikmay/Landing">https://github.com/vikmay/Landing</a>
+                        </p>
+                        <p class="skills__text">
+                            <span><b>Online Shop (Next.js) </b></span><a href="https://github.com/vikmay/Exam-Maikut-Bolonnyi">https://github.com/vikmay/onlineshop</a>
+                        </p>
+                        <p class="skills__text">
+                            <span><b>Weather stations(Angular)(under
+                                    development)
+                                </b></span><a href="https://github.com/vikmay/Stations">https://github.com/vikmay/Stations</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -194,16 +206,20 @@
                 <div class="resume__block">
                     <div class="main-info fh">
                         <div class="experiences">
-
                             <h3 class="experiences__header">Experience</h3>
                             <div class="experiences__company">
                                 <div class="experiences__company-header">
                                     <span class="experiences__company-header-durability">2024</span>
-                                    <h3 class="experiences__company-header-name">Concept Area</h3>
+                                    <h3 class="experiences__company-header-name">
+                                        Concept Area
+                                    </h3>
                                 </div>
                                 <div class="experiences__company-project">
                                     <span class="experiences__company-project-role">Full-Stack Developer</span>
-                                    <h3 class="experiences__company-project-name">Strategic IT consulting for digital transformation</h3>
+                                    <h3 class="experiences__company-project-name">
+                                        Strategic IT consulting for digital
+                                        transformation
+                                    </h3>
                                     <ul class="experiences__company-project-responsibilities">
                                         <li>Backend Architecture</li>
                                         <li>Frontend Development</li>
@@ -214,12 +230,16 @@
                                 </div>
                                 <div class="experiences__company-header">
                                     <span class="experiences__company-header-durability">2024</span>
-                                    <h3 class="experiences__company-header-name">Binary Studio</h3>
+                                    <h3 class="experiences__company-header-name">
+                                        Binary Studio
+                                    </h3>
                                 </div>
 
                                 <div class="experiences__company-project">
                                     <span class="experiences__company-project-role">Full-Stack Developer</span>
-                                    <h3 class="experiences__company-project-name">Binary Studio Website</h3>
+                                    <h3 class="experiences__company-project-name">
+                                        Binary Studio Website
+                                    </h3>
                                     <ul class="experiences__company-project-responsibilities">
                                         <li>Backend Architecture</li>
                                         <li>Frontend Development</li>
@@ -233,31 +253,65 @@
                         <div class="additional-info fv">
                             <div class="additional-info fv">
                                 <div class="additional-info__education">
-                                    <h3 class="additional-info__education-header">Education</h3>
+                                    <h3 class="additional-info__education-header">
+                                        Education
+                                    </h3>
                                     <div class="additional-info__education-university">
-                                        <h3 class="additional-info__education-university-speciality">Faculty of Foreign Languages</h3>
-                                        <span class="additional-info__education-university-durability"> 1993-1999 </span>
-                                        <p class="additional-info__education-university-name">Drogobych Ivan Franko State Pedagogical University</p>
-                                        <h3 class="additional-info__education-university-speciality">Frontend Development</h3>
-                                        <span class="additional-info__education-university-durability"> 2022-2023 </span>
-                                        <p class="additional-info__education-university-name">IT Step Academy</p>
-                                        <h3 class="additional-info__education-university-speciality">Full-Stack Development</h3>
-                                        <span class="additional-info__education-university-durability"> 2024 </span>
-                                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                                        <h3 class="additional-info__education-university-speciality">
+                                            Faculty of Foreign Languages
+                                        </h3>
+                                        <span class="additional-info__education-university-durability">
+                                            1993-1999
+                                        </span>
+                                        <p class="additional-info__education-university-name">
+                                            Drogobych Ivan Franko State
+                                            Pedagogical University
+                                        </p>
+                                        <h3 class="additional-info__education-university-speciality">
+                                            Frontend Development
+                                        </h3>
+                                        <span class="additional-info__education-university-durability">
+                                            2022-2023
+                                        </span>
+                                        <p class="additional-info__education-university-name">
+                                            IT Step Academy
+                                        </p>
+                                        <h3 class="additional-info__education-university-speciality">
+                                            Full-Stack Development
+                                        </h3>
+                                        <span class="additional-info__education-university-durability">
+                                            2024
+                                        </span>
+                                        <p class="additional-info__education-university-name">
+                                            Binary Studio Academy
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="additional-info__languages">
-                                    <h3 class="additional-info__languages-header">Languages</h3>
-                                    <p class="additional-info__languages-item">English</p>
-                                    <p class="additional-info__languages-item">Ukrainian</p>
-                                    <p class="additional-info__languages-item">Russian</p>
-                                    <p class="additional-info__languages-item">Polish</p>
-                                    <p class="additional-info__languages-item">German</p>
-                                    <p class="additional-info__languages-item">Dutch</p>
+                                    <h3 class="additional-info__languages-header">
+                                        Languages
+                                    </h3>
+                                    <p class="additional-info__languages-item">
+                                        English
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        Ukrainian
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        Russian
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        Polish
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        German
+                                    </p>
+                                    <p class="additional-info__languages-item">
+                                        Dutch
+                                    </p>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -266,9 +320,12 @@
                 <div class="resume__block">
                     <div class="skills hobbies">
                         <h3 class="skills__header">Hobbies</h3>
-                        <p class="skills__text">I am passionate about programming, video surveillance, alarms, and music.
-                            I play keyboards and guitar.<br>
-                            <b>If u wanna ROCK - PUSH the guitar & MOVE YOUR BODY!!!</b>
+                        <p class="skills__text">
+                            I am passionate about programming, video
+                            surveillance, alarms, and music. I play
+                            keyboards and guitar.<br />
+                            <b>If u wanna ROCK - PUSH the guitar & MOVE
+                                YOUR BODY!!!</b>
                         </p>
                         <button
                             class="rock-guitar-button"
@@ -277,17 +334,16 @@
                             <img
                                 src="./assets/guitar.png"
                                 alt="guitar"
-                            >
+                            />
                         </button>
 
                         <audio id="myAudio">
                             <source
                                 src="./assets/audio.mp3"
                                 type="audio/mpeg"
-                            >
+                            />
                             Your browser does not support the audio element.
                         </audio>
-
                     </div>
                 </div>
             </div>
