--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
                     <div class="contact_info_container fh">
                         <div class="contact-info__block">
                             <a
-                                href="https://www.google.com/maps/place/%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87
-                                ,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,
-                                +82100/@49.3521054,23.3455673,11z/data=!3m1!4b1!4m6!3m5!1s0x473a4ea312a96935:0x9a7037350ab28ee5!8m2!3d49.3580116!4d23.5123193!16zL20vMDJrNnN6?authuser=0&entry=ttu"
+                                href="https://www.google.com/maps/place/%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87,+%D0%9B%D1%8C%D0%B2%D1%96%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+82100/@49.3522225,23.5103714,13z/data=!4m6!3m5!1s0x473a4ea312a96935:0x9a7037350ab28ee5!8m2!3d49.3580116!4d23.5123193!16zL20vMDJrNnN6?authuser=0&entry=ttu"
                                 rel="author"
                                 class="contact-info__item"
                                 target="_blank"
