--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta
         name="viewport"
         content="width=device-width, initial-scale=1"
-    />
+    >
     <title>Résumé</title>
     <link
         rel="stylesheet"
         href="styles.css"
-    />
+    >
 </head>
 
 <body>
@@ -86,7 +86,7 @@
                                 class="contact-info__avatar"
                                 src="assets/avatar.png"
                                 alt="Avatar"
-                            />
+                            >
                         </div>
 
                         <div class="contact-info__block">
@@ -321,7 +321,7 @@
                         <p class="skills__text">
                             I am passionate about programming, video
                             surveillance, alarms, and music. I play
-                            keyboards and guitar.<br />
+                            keyboards and guitar.<br>
                             <b>If u wanna ROCK - PUSH the guitar & MOVE
                                 YOUR BODY!!!</b>
                         </p>
@@ -332,14 +332,14 @@
                             <img
                                 src="./assets/guitar.png"
                                 alt="guitar"
-                            />
+                            >
                         </button>
 
                         <audio id="myAudio">
                             <source
                                 src="./assets/audio.mp3"
                                 type="audio/mpeg"
-                            />
+                            >
                             Your browser does not support the audio element.
                         </audio>
                     </div>
